test/errors/error9.base
Expecting a string with a link name or a tag
external foo() : int;
                    ^
